--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/geolocation": "^5.45.0",
     "@awesome-cordova-plugins/http": "^5.44.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
@@ -30,6 +31,7 @@
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-geolocation": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
